--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,19 @@
   width: 350px;
   margin: 10px;
   border: 1px solid;
-
+  border-radius: 5px;
+  
+  
+}
+.maindiv:hover{
+  box-shadow: 2px 6px 5px lightslategray;
+  transition: 1.0s;
+  box-shadow: 1px 2px 8px 6px ;
+}
+.div{
+  padding: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
 }
 .img{
   width: 350px;
@@ -23,12 +35,26 @@
   border-radius: 5px;
   width: 500px;
   padding: 15px;
+  margin-top: 100px;
+  margin-left: 500px;
+  box-shadow: 1px 2px 5px 3px ;
 }
 .home{
-  border: 1px solid;
   display: flex;
   flex-wrap: wrap;
   text-align: center;
   height: 20px;
   padding: 30px;
+  box-shadow: 0px 5px 5px 0px ;
+  font-family: "verdana";
+  border-color: transparent;
+  
+}
+.btn{
+  cursor: pointer;
+  color: rgb(244, 248, 244);
+  background-color: green;
+  border-radius: 5px;
+  width: 100px;
+  height: 30px;
 }
